refactored off-screening of menus on mobile, fixed layout shift bug

--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -14,6 +14,14 @@ html {
   box-sizing: border-box;
 }
 
+html {
+  scrollbar-gutter: stable;
+}
+
+body, html {
+  overflow-x: hidden;
+}
+
 *,
 *:before,
 *:after {
